infra/k8s/aws/base/shared/httproute-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soranix-api-route
  namespace: soranix
spec:
  parentRefs:
    - name: soranix-gateway
  hostnames:
    - api.soranix.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gateway-service
          port: 80
